--- a/html/layout/header/navbar_leadpage.html
+++ b/html/layout/header/navbar_leadpage.html
@@ -6,7 +6,7 @@
                 <span class="sr-only">Toggle navigation</span>
                 <i class="fa fa-bars"></i>
             </button>
-            <a id="ar-brand" class="navbar-brand" href="index.html">Artificial <span>Reason</span></a>
+            <a id="ar-brand" class="navbar-brand" href="index.html">IS <span>help desk</span></a>
         </div> <!-- navbar-header -->
         
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -226,6 +226,16 @@
                         <li><a href="portfolio_item_devices.html">Portfolio item device</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Axion</a>
+                     <ul class="dropdown-menu dropdown-menu-left">
+                        <li><a href="axion_callvalidator.html">Call Validator</a></li>
+                        <li><a href="axion_inplaceconfig">In-Place Configuration</a></li>
+                        <li><a href="axion_replaceoutdated">Replace Outdated</a></li>
+                        <li><a href="axion_devcomputerinfo">Dev Computer Info</a></li>
+                        <li><a href="axion_printermappings">Printer Mappings</a></li>
+                    </ul>
+                </li>                
              </ul>
         </div><!-- navbar-collapse -->
     </div><!-- container -->
