selected violet as a theme color

--- a/html/layout/header/head.html
+++ b/html/layout/header/head.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="<%= assets %>css/layers.css">
     <link rel="stylesheet" type="text/css" href="<%= assets %>css/navigation.css">-->
 
-    <link href="<%= assets %>css/style-blue.css" rel="stylesheet" title="default">
+    <link href="<%= assets %>css/style-violet.css" rel="stylesheet" title="default">
     <link href="<%= assets %>css/width-full.css" rel="stylesheet" title="default">
 
 
