--- a/html/layout/header/navbar_leadpage.html
+++ b/html/layout/header/navbar_leadpage.html
@@ -230,10 +230,10 @@
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Axion</a>
                      <ul class="dropdown-menu dropdown-menu-left">
                         <li><a href="axion_callvalidator.html">Call Validator</a></li>
-                        <li><a href="axion_inplaceconfig">In-Place Configuration</a></li>
-                        <li><a href="axion_replaceoutdated">Replace Outdated</a></li>
-                        <li><a href="axion_devcomputerinfo">Dev Computer Info</a></li>
-                        <li><a href="axion_printermappings">Printer Mappings</a></li>
+                        <li><a href="axion_inplaceconfig.html">In-Place Configuration</a></li>
+                        <li><a href="axion_replaceoutdated.html">Replace Outdated</a></li>
+                        <li><a href="axion_devcomputerinfo.html">Dev Computer Info</a></li>
+                        <li><a href="axion_printermappings.html">Printer Mappings</a></li>
                     </ul>
                 </li>                
              </ul>
