--- a/html/layout/footer/foot.html
+++ b/html/layout/footer/foot.html
@@ -1,3 +1,3 @@
 <footer id="footer">
-    <p>&copy; 2019 <a href="#">Axion Bridge</a>, inc. All rights reserved.</p>
+    <p>&copy; 2019 <a href="#">Axiom Bridge</a>, inc. All rights reserved.</p>
 </footer>
